src/ParserP/y.output
   0  $accept : programa $end

   1  programa : bloque

   2  bloque : sentencia
   3         | '{' bloque_sentencias '}'
   4         | error_bloque

   5  bloque_sentencias : sentencia
   6                    | bloque_sentencias sentencia

   7  error_bloque : error bloque_sentencias '}'
   8               | '{' bloque_sentencias error

   9  sentencia : declaracion ','
  10            | ejecucion ','
  11            | error_sentencia_d

  12  error_sentencia_d : declaracion error
  13                    | ejecucion error

  14  declaracion : tipo lista_de_variables
  15              | funcion

  16  lista_de_variables : lista_de_variables ';' ID
  17                     | ID
  18                     | error_lista_de_variables

  19  error_lista_de_variables : lista_de_variables ID

  20  $$1 :

  21  $$2 :

  22  funcion : encabezado_fun bloque_sentencias clousure $$1 RETURN '(' retorno_funcion fin_fun $$2

  23  $$3 :

  24  $$4 :

  25  funcion : encabezado_fun bloque_sentencias RETURN $$3 '(' retorno_funcion $$4 fin_fun
  26          | FUN ID '(' ')' bloque_sentencias RETURN

  27  encabezado_fun : FUN ID '(' ')' '{'

  28  fin_fun : ')' '}'
  29          | ')'

  30  retorno_funcion : ID '(' ')'
  31                  | bloque_sentencias

  32  $$5 :

  33  clousure : VOID ID '(' ')' $$5 '{' bloque_sentencias '}'

  34  $$6 :

  35  $$7 :

  36  clousure : VOID ID '(' ')' $$6 bloque_sentencias '}' $$7

  37  $$8 :

  38  clousure : VOID ID '(' ')' $$8 error

  39  $$9 :

  40  clousure : VOID ID $$9 error
  41           | VOID ID '('

  42  $$10 :

  43  tipo : USLINTEGER $$10

  44  $$11 :

  45  tipo : DOUBLE $$11

  46  ejecucion : control
  47            | seleccion
  48            | print
  49            | asignacion

  50  print : PRINT '(' CADENA ')'
  51        | error_print

  52  error_print : PRINT error CADENA ')'
  53              | PRINT '(' CADENA error
  54              | PRINT CADENA

  55  control : case_encabezado '{' lista_acciones '}'
  56          | error_control

  57  error_control : case_encabezado error lista_acciones '}'
  58                | case_encabezado '{' lista_acciones error
  59                | CASE ID lista_acciones error
  60                | case_encabezado lista_acciones error

  61  case_encabezado : CASE '(' ID ')'
  62                  | CASE ID ')'
  63                  | CASE '(' ID

  64  lista_acciones : lista_acciones accion
  65                 | accion

  66  $$12 :

  67  accion : cte ':' DO $$12 bloque
  68         | error_accion

  69  $$13 :

  70  error_accion : cte error DO $$13 bloque

  71  cte : CTE_D
  72      | CTE_USLINTEGER
  73      | '-' CTE_USLINTEGER

  74  if_condicion : IF '(' condicion ')'
  75               | IF error condicion ')'
  76               | IF '(' condicion error
  77               | IF condicion error

  78  seleccion : if_condicion bloque END_IF

  79  $$14 :

  80  seleccion : if_condicion bloque ELSE $$14 bloque END_IF
  81            | if_condicion error
  82            | if_condicion bloque error

  83  $$15 :

  84  asignacion : ID ASIGNACION expresion $$15
  85             | error_asignacion

  86  error_asignacion : ID expresion
  87                   | ASIGNACION expresion

  88  $$16 :

  89  expresion : expresion '+' termino $$16
  90            | expresion '-' termino
  91            | termino

  92  termino : termino '*' factor
  93          | termino '/' factor
  94          | factor

  95  factor : cte
  96         | ID

  97  condicion : expresion comparador expresion

  98  comparador : '<'
  99             | '>'
 100             | '='
 101             | S_MAYOR_IGUAL
 102             | S_MENOR_IGUAL
 103             | S_DISTINTO

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	'{'  shift 10
	.  error

	programa  goto 11
	bloque  goto 12
	sentencia  goto 13
	error_bloque  goto 14
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 1
	error_bloque : error . bloque_sentencias '}'  (7)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	.  error

	sentencia  goto 30
	bloque_sentencias  goto 31
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 2
	asignacion : ID . ASIGNACION expresion $$15  (84)
	error_asignacion : ID . expresion  (86)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	ASIGNACION  shift 35
	'-'  shift 36
	.  error

	cte  goto 37
	expresion  goto 38
	termino  goto 39
	factor  goto 40


state 3
	if_condicion : IF . '(' condicion ')'  (74)
	if_condicion : IF . error condicion ')'  (75)
	if_condicion : IF . '(' condicion error  (76)
	if_condicion : IF . condicion error  (77)

	error  shift 41
	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'('  shift 42
	'-'  shift 36
	.  error

	cte  goto 37
	condicion  goto 43
	expresion  goto 44
	termino  goto 39
	factor  goto 40


state 4
	funcion : FUN . ID '(' ')' bloque_sentencias RETURN  (26)
	encabezado_fun : FUN . ID '(' ')' '{'  (27)

	ID  shift 45
	.  error


state 5
	tipo : DOUBLE . $$11  (45)
	$$11 : .  (44)

	.  reduce 44

	$$11  goto 46


state 6
	tipo : USLINTEGER . $$10  (43)
	$$10 : .  (42)

	.  reduce 42

	$$10  goto 47


state 7
	print : PRINT . '(' CADENA ')'  (50)
	error_print : PRINT . error CADENA ')'  (52)
	error_print : PRINT . '(' CADENA error  (53)
	error_print : PRINT . CADENA  (54)

	error  shift 48
	CADENA  shift 49
	'('  shift 50
	.  error


state 8
	error_asignacion : ASIGNACION . expresion  (87)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	expresion  goto 51
	termino  goto 39
	factor  goto 40


state 9
	error_control : CASE . ID lista_acciones error  (59)
	case_encabezado : CASE . '(' ID ')'  (61)
	case_encabezado : CASE . ID ')'  (62)
	case_encabezado : CASE . '(' ID  (63)

	ID  shift 52
	'('  shift 53
	.  error


state 10
	bloque : '{' . bloque_sentencias '}'  (3)
	error_bloque : '{' . bloque_sentencias error  (8)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	.  error

	sentencia  goto 30
	bloque_sentencias  goto 54
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 11
	$accept : programa . $end  (0)

	$end  accept


state 12
	programa : bloque .  (1)

	.  reduce 1


state 13
	bloque : sentencia .  (2)

	.  reduce 2


state 14
	bloque : error_bloque .  (4)

	.  reduce 4


state 15
	sentencia : declaracion . ','  (9)
	error_sentencia_d : declaracion . error  (12)

	error  shift 55
	','  shift 56
	.  error


state 16
	sentencia : ejecucion . ','  (10)
	error_sentencia_d : ejecucion . error  (13)

	error  shift 57
	','  shift 58
	.  error


state 17
	sentencia : error_sentencia_d .  (11)

	.  reduce 11


state 18
	declaracion : tipo . lista_de_variables  (14)

	ID  shift 59
	.  error

	lista_de_variables  goto 60
	error_lista_de_variables  goto 61


state 19
	declaracion : funcion .  (15)

	.  reduce 15


state 20
	funcion : encabezado_fun . bloque_sentencias clousure $$1 RETURN '(' retorno_funcion fin_fun $$2  (22)
	funcion : encabezado_fun . bloque_sentencias RETURN $$3 '(' retorno_funcion $$4 fin_fun  (25)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	.  error

	sentencia  goto 30
	bloque_sentencias  goto 62
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 21
	ejecucion : control .  (46)

	.  reduce 46


state 22
	ejecucion : seleccion .  (47)

	.  reduce 47


state 23
	ejecucion : print .  (48)

	.  reduce 48


state 24
	ejecucion : asignacion .  (49)

	.  reduce 49


state 25
	print : error_print .  (51)

	.  reduce 51


state 26
	control : case_encabezado . '{' lista_acciones '}'  (55)
	error_control : case_encabezado . error lista_acciones '}'  (57)
	error_control : case_encabezado . '{' lista_acciones error  (58)
	error_control : case_encabezado . lista_acciones error  (60)

	error  shift 63
	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'{'  shift 64
	'-'  shift 36
	.  error

	lista_acciones  goto 65
	accion  goto 66
	cte  goto 67
	error_accion  goto 68


state 27
	control : error_control .  (56)

	.  reduce 56


state 28
	seleccion : if_condicion . bloque END_IF  (78)
	seleccion : if_condicion . bloque ELSE $$14 bloque END_IF  (80)
	seleccion : if_condicion . error  (81)
	seleccion : if_condicion . bloque error  (82)

	error  shift 69
	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	'{'  shift 10
	.  error

	bloque  goto 70
	sentencia  goto 13
	error_bloque  goto 14
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 29
	asignacion : error_asignacion .  (85)

	.  reduce 85


state 30
	bloque_sentencias : sentencia .  (5)

	.  reduce 5


state 31
	bloque_sentencias : bloque_sentencias . sentencia  (6)
	error_bloque : error bloque_sentencias . '}'  (7)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	'}'  shift 71
	.  error

	sentencia  goto 72
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 32
	cte : CTE_D .  (71)

	.  reduce 71


state 33
	cte : CTE_USLINTEGER .  (72)

	.  reduce 72


state 34
	factor : ID .  (96)

	.  reduce 96


state 35
	asignacion : ID ASIGNACION . expresion $$15  (84)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	expresion  goto 73
	termino  goto 39
	factor  goto 40


state 36
	cte : '-' . CTE_USLINTEGER  (73)

	CTE_USLINTEGER  shift 74
	.  error


state 37
	factor : cte .  (95)

	.  reduce 95


state 38
	error_asignacion : ID expresion .  (86)
	expresion : expresion . '+' termino $$16  (89)
	expresion : expresion . '-' termino  (90)

	'-'  shift 75
	'+'  shift 76
	error  reduce 86
	','  reduce 86


state 39
	expresion : termino .  (91)
	termino : termino . '*' factor  (92)
	termino : termino . '/' factor  (93)

	'*'  shift 77
	'/'  shift 78
	error  reduce 91
	S_MAYOR_IGUAL  reduce 91
	S_MENOR_IGUAL  reduce 91
	S_DISTINTO  reduce 91
	','  reduce 91
	')'  reduce 91
	'-'  reduce 91
	'+'  reduce 91
	'<'  reduce 91
	'>'  reduce 91
	'='  reduce 91


state 40
	termino : factor .  (94)

	.  reduce 94


state 41
	if_condicion : IF error . condicion ')'  (75)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	condicion  goto 79
	expresion  goto 44
	termino  goto 39
	factor  goto 40


state 42
	if_condicion : IF '(' . condicion ')'  (74)
	if_condicion : IF '(' . condicion error  (76)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	condicion  goto 80
	expresion  goto 44
	termino  goto 39
	factor  goto 40


state 43
	if_condicion : IF condicion . error  (77)

	error  shift 81
	.  error


state 44
	expresion : expresion . '+' termino $$16  (89)
	expresion : expresion . '-' termino  (90)
	condicion : expresion . comparador expresion  (97)

	S_MAYOR_IGUAL  shift 82
	S_MENOR_IGUAL  shift 83
	S_DISTINTO  shift 84
	'-'  shift 75
	'+'  shift 76
	'<'  shift 85
	'>'  shift 86
	'='  shift 87
	.  error

	comparador  goto 88


state 45
	funcion : FUN ID . '(' ')' bloque_sentencias RETURN  (26)
	encabezado_fun : FUN ID . '(' ')' '{'  (27)

	'('  shift 89
	.  error


state 46
	tipo : DOUBLE $$11 .  (45)

	.  reduce 45


state 47
	tipo : USLINTEGER $$10 .  (43)

	.  reduce 43


state 48
	error_print : PRINT error . CADENA ')'  (52)

	CADENA  shift 90
	.  error


state 49
	error_print : PRINT CADENA .  (54)

	.  reduce 54


state 50
	print : PRINT '(' . CADENA ')'  (50)
	error_print : PRINT '(' . CADENA error  (53)

	CADENA  shift 91
	.  error


state 51
	error_asignacion : ASIGNACION expresion .  (87)
	expresion : expresion . '+' termino $$16  (89)
	expresion : expresion . '-' termino  (90)

	'-'  shift 75
	'+'  shift 76
	error  reduce 87
	','  reduce 87


state 52
	error_control : CASE ID . lista_acciones error  (59)
	case_encabezado : CASE ID . ')'  (62)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	')'  shift 92
	'-'  shift 36
	.  error

	lista_acciones  goto 93
	accion  goto 66
	cte  goto 67
	error_accion  goto 68


state 53
	case_encabezado : CASE '(' . ID ')'  (61)
	case_encabezado : CASE '(' . ID  (63)

	ID  shift 94
	.  error


state 54
	bloque : '{' bloque_sentencias . '}'  (3)
	bloque_sentencias : bloque_sentencias . sentencia  (6)
	error_bloque : '{' bloque_sentencias . error  (8)

	error  shift 95
	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	'}'  shift 96
	.  error

	sentencia  goto 72
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 55
	error_sentencia_d : declaracion error .  (12)

	.  reduce 12


state 56
	sentencia : declaracion ',' .  (9)

	.  reduce 9


state 57
	error_sentencia_d : ejecucion error .  (13)

	.  reduce 13


state 58
	sentencia : ejecucion ',' .  (10)

	.  reduce 10


state 59
	lista_de_variables : ID .  (17)

	.  reduce 17


state 60
	declaracion : tipo lista_de_variables .  (14)
	lista_de_variables : lista_de_variables . ';' ID  (16)
	error_lista_de_variables : lista_de_variables . ID  (19)

	ID  shift 97
	';'  shift 98
	error  reduce 14
	','  reduce 14


state 61
	lista_de_variables : error_lista_de_variables .  (18)

	.  reduce 18


state 62
	bloque_sentencias : bloque_sentencias . sentencia  (6)
	funcion : encabezado_fun bloque_sentencias . clousure $$1 RETURN '(' retorno_funcion fin_fun $$2  (22)
	funcion : encabezado_fun bloque_sentencias . RETURN $$3 '(' retorno_funcion $$4 fin_fun  (25)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	RETURN  shift 99
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	VOID  shift 100
	.  error

	sentencia  goto 72
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	clousure  goto 101
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 63
	error_control : case_encabezado error . lista_acciones '}'  (57)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'-'  shift 36
	.  error

	lista_acciones  goto 102
	accion  goto 66
	cte  goto 67
	error_accion  goto 68


state 64
	control : case_encabezado '{' . lista_acciones '}'  (55)
	error_control : case_encabezado '{' . lista_acciones error  (58)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'-'  shift 36
	.  error

	lista_acciones  goto 103
	accion  goto 66
	cte  goto 67
	error_accion  goto 68


state 65
	error_control : case_encabezado lista_acciones . error  (60)
	lista_acciones : lista_acciones . accion  (64)

	error  shift 104
	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'-'  shift 36
	.  error

	accion  goto 105
	cte  goto 67
	error_accion  goto 68


state 66
	lista_acciones : accion .  (65)

	.  reduce 65


state 67
	accion : cte . ':' DO $$12 bloque  (67)
	error_accion : cte . error DO $$13 bloque  (70)

	error  shift 106
	':'  shift 107
	.  error


state 68
	accion : error_accion .  (68)

	.  reduce 68


state 69
	error_bloque : error . bloque_sentencias '}'  (7)
	seleccion : if_condicion error .  (81)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	error  reduce 81
	','  reduce 81

	sentencia  goto 30
	bloque_sentencias  goto 31
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 70
	seleccion : if_condicion bloque . END_IF  (78)
	seleccion : if_condicion bloque . ELSE $$14 bloque END_IF  (80)
	seleccion : if_condicion bloque . error  (82)

	error  shift 108
	ELSE  shift 109
	END_IF  shift 110
	.  error


state 71
	error_bloque : error bloque_sentencias '}' .  (7)

	.  reduce 7


state 72
	bloque_sentencias : bloque_sentencias sentencia .  (6)

	.  reduce 6


state 73
	asignacion : ID ASIGNACION expresion . $$15  (84)
	expresion : expresion . '+' termino $$16  (89)
	expresion : expresion . '-' termino  (90)
	$$15 : .  (83)

	'-'  shift 75
	'+'  shift 76
	error  reduce 83
	','  reduce 83

	$$15  goto 111


state 74
	cte : '-' CTE_USLINTEGER .  (73)

	.  reduce 73


state 75
	expresion : expresion '-' . termino  (90)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	termino  goto 112
	factor  goto 40


state 76
	expresion : expresion '+' . termino $$16  (89)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	termino  goto 113
	factor  goto 40


state 77
	termino : termino '*' . factor  (92)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	factor  goto 114


state 78
	termino : termino '/' . factor  (93)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	factor  goto 115


state 79
	if_condicion : IF error condicion . ')'  (75)

	')'  shift 116
	.  error


state 80
	if_condicion : IF '(' condicion . ')'  (74)
	if_condicion : IF '(' condicion . error  (76)

	error  shift 117
	')'  shift 118
	.  error


state 81
	if_condicion : IF condicion error .  (77)

	.  reduce 77


state 82
	comparador : S_MAYOR_IGUAL .  (101)

	.  reduce 101


state 83
	comparador : S_MENOR_IGUAL .  (102)

	.  reduce 102


state 84
	comparador : S_DISTINTO .  (103)

	.  reduce 103


state 85
	comparador : '<' .  (98)

	.  reduce 98


state 86
	comparador : '>' .  (99)

	.  reduce 99


state 87
	comparador : '=' .  (100)

	.  reduce 100


state 88
	condicion : expresion comparador . expresion  (97)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	ID  shift 34
	'-'  shift 36
	.  error

	cte  goto 37
	expresion  goto 119
	termino  goto 39
	factor  goto 40


state 89
	funcion : FUN ID '(' . ')' bloque_sentencias RETURN  (26)
	encabezado_fun : FUN ID '(' . ')' '{'  (27)

	')'  shift 120
	.  error


state 90
	error_print : PRINT error CADENA . ')'  (52)

	')'  shift 121
	.  error


state 91
	print : PRINT '(' CADENA . ')'  (50)
	error_print : PRINT '(' CADENA . error  (53)

	error  shift 122
	')'  shift 123
	.  error


state 92
	case_encabezado : CASE ID ')' .  (62)

	.  reduce 62


state 93
	error_control : CASE ID lista_acciones . error  (59)
	lista_acciones : lista_acciones . accion  (64)

	error  shift 124
	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'-'  shift 36
	.  error

	accion  goto 105
	cte  goto 67
	error_accion  goto 68


state 94
	case_encabezado : CASE '(' ID . ')'  (61)
	case_encabezado : CASE '(' ID .  (63)

	')'  shift 125
	error  reduce 63
	CTE_D  reduce 63
	CTE_USLINTEGER  reduce 63
	'{'  reduce 63
	'-'  reduce 63


state 95
	error_bloque : '{' bloque_sentencias error .  (8)

	.  reduce 8


state 96
	bloque : '{' bloque_sentencias '}' .  (3)

	.  reduce 3


state 97
	error_lista_de_variables : lista_de_variables ID .  (19)

	.  reduce 19


state 98
	lista_de_variables : lista_de_variables ';' . ID  (16)

	ID  shift 126
	.  error


state 99
	funcion : encabezado_fun bloque_sentencias RETURN . $$3 '(' retorno_funcion $$4 fin_fun  (25)
	$$3 : .  (23)

	.  reduce 23

	$$3  goto 127


state 100
	clousure : VOID . ID '(' ')' $$5 '{' bloque_sentencias '}'  (33)
	clousure : VOID . ID '(' ')' $$6 bloque_sentencias '}' $$7  (36)
	clousure : VOID . ID '(' ')' $$8 error  (38)
	clousure : VOID . ID $$9 error  (40)
	clousure : VOID . ID '('  (41)

	ID  shift 128
	.  error


state 101
	funcion : encabezado_fun bloque_sentencias clousure . $$1 RETURN '(' retorno_funcion fin_fun $$2  (22)
	$$1 : .  (20)

	.  reduce 20

	$$1  goto 129


state 102
	error_control : case_encabezado error lista_acciones . '}'  (57)
	lista_acciones : lista_acciones . accion  (64)

	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'}'  shift 130
	'-'  shift 36
	.  error

	accion  goto 105
	cte  goto 67
	error_accion  goto 68


state 103
	control : case_encabezado '{' lista_acciones . '}'  (55)
	error_control : case_encabezado '{' lista_acciones . error  (58)
	lista_acciones : lista_acciones . accion  (64)

	error  shift 131
	CTE_D  shift 32
	CTE_USLINTEGER  shift 33
	'}'  shift 132
	'-'  shift 36
	.  error

	accion  goto 105
	cte  goto 67
	error_accion  goto 68


state 104
	error_control : case_encabezado lista_acciones error .  (60)

	.  reduce 60


state 105
	lista_acciones : lista_acciones accion .  (64)

	.  reduce 64


state 106
	error_accion : cte error . DO $$13 bloque  (70)

	DO  shift 133
	.  error


state 107
	accion : cte ':' . DO $$12 bloque  (67)

	DO  shift 134
	.  error


state 108
	seleccion : if_condicion bloque error .  (82)

	.  reduce 82


state 109
	seleccion : if_condicion bloque ELSE . $$14 bloque END_IF  (80)
	$$14 : .  (79)

	.  reduce 79

	$$14  goto 135


state 110
	seleccion : if_condicion bloque END_IF .  (78)

	.  reduce 78


state 111
	asignacion : ID ASIGNACION expresion $$15 .  (84)

	.  reduce 84


state 112
	expresion : expresion '-' termino .  (90)
	termino : termino . '*' factor  (92)
	termino : termino . '/' factor  (93)

	'*'  shift 77
	'/'  shift 78
	error  reduce 90
	S_MAYOR_IGUAL  reduce 90
	S_MENOR_IGUAL  reduce 90
	S_DISTINTO  reduce 90
	','  reduce 90
	')'  reduce 90
	'-'  reduce 90
	'+'  reduce 90
	'<'  reduce 90
	'>'  reduce 90
	'='  reduce 90


state 113
	expresion : expresion '+' termino . $$16  (89)
	termino : termino . '*' factor  (92)
	termino : termino . '/' factor  (93)
	$$16 : .  (88)

	'*'  shift 77
	'/'  shift 78
	error  reduce 88
	S_MAYOR_IGUAL  reduce 88
	S_MENOR_IGUAL  reduce 88
	S_DISTINTO  reduce 88
	','  reduce 88
	')'  reduce 88
	'-'  reduce 88
	'+'  reduce 88
	'<'  reduce 88
	'>'  reduce 88
	'='  reduce 88

	$$16  goto 136


state 114
	termino : termino '*' factor .  (92)

	.  reduce 92


state 115
	termino : termino '/' factor .  (93)

	.  reduce 93


state 116
	if_condicion : IF error condicion ')' .  (75)

	.  reduce 75


state 117
	if_condicion : IF '(' condicion error .  (76)

	.  reduce 76


state 118
	if_condicion : IF '(' condicion ')' .  (74)

	.  reduce 74


state 119
	expresion : expresion . '+' termino $$16  (89)
	expresion : expresion . '-' termino  (90)
	condicion : expresion comparador expresion .  (97)

	'-'  shift 75
	'+'  shift 76
	error  reduce 97
	')'  reduce 97


state 120
	funcion : FUN ID '(' ')' . bloque_sentencias RETURN  (26)
	encabezado_fun : FUN ID '(' ')' . '{'  (27)

	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	'{'  shift 137
	.  error

	sentencia  goto 30
	bloque_sentencias  goto 138
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 121
	error_print : PRINT error CADENA ')' .  (52)

	.  reduce 52


state 122
	error_print : PRINT '(' CADENA error .  (53)

	.  reduce 53


state 123
	print : PRINT '(' CADENA ')' .  (50)

	.  reduce 50


state 124
	error_control : CASE ID lista_acciones error .  (59)

	.  reduce 59


state 125
	case_encabezado : CASE '(' ID ')' .  (61)

	.  reduce 61


state 126
	lista_de_variables : lista_de_variables ';' ID .  (16)

	.  reduce 16


state 127
	funcion : encabezado_fun bloque_sentencias RETURN $$3 . '(' retorno_funcion $$4 fin_fun  (25)

	'('  shift 139
	.  error


state 128
	clousure : VOID ID . '(' ')' $$5 '{' bloque_sentencias '}'  (33)
	clousure : VOID ID . '(' ')' $$6 bloque_sentencias '}' $$7  (36)
	clousure : VOID ID . '(' ')' $$8 error  (38)
	clousure : VOID ID . $$9 error  (40)
	clousure : VOID ID . '('  (41)
	$$9 : .  (39)

	'('  shift 140
	error  reduce 39

	$$9  goto 141


state 129
	funcion : encabezado_fun bloque_sentencias clousure $$1 . RETURN '(' retorno_funcion fin_fun $$2  (22)

	RETURN  shift 142
	.  error


state 130
	error_control : case_encabezado error lista_acciones '}' .  (57)

	.  reduce 57


state 131
	error_control : case_encabezado '{' lista_acciones error .  (58)

	.  reduce 58


state 132
	control : case_encabezado '{' lista_acciones '}' .  (55)

	.  reduce 55


state 133
	error_accion : cte error DO . $$13 bloque  (70)
	$$13 : .  (69)

	.  reduce 69

	$$13  goto 143


state 134
	accion : cte ':' DO . $$12 bloque  (67)
	$$12 : .  (66)

	.  reduce 66

	$$12  goto 144


state 135
	seleccion : if_condicion bloque ELSE $$14 . bloque END_IF  (80)

	error  shift 1
	ID  shift 2
	IF  shift 3
	FUN  shift 4
	DOUBLE  shift 5
	USLINTEGER  shift 6
	PRINT  shift 7
	ASIGNACION  shift 8
	CASE  shift 9
	'{'  shift 10
	.  error

	bloque  goto 145
	sentencia  goto 13
	error_bloque  goto 14
	declaracion  goto 15
	ejecucion  goto 16
	error_sentencia_d  goto 17
	tipo  goto 18
	funcion  goto 19
	encabezado_fun  goto 20
	control  goto 21
	seleccion  goto 22
	print  goto 23
	asignacion  goto 24
	error_print  goto 25
	case_encabezado  goto 26
	error_control  goto 27
	if_condicion  goto 28
	error_asignacion  goto 29


state 136
	expresion : expresion '+' termino $$16 .  (89)

	.  reduce 89


state 137
	encabezado_fun : FUN ID '(' ')' '{' .  (27)

	.  reduce 27


state 138
